tests/golden/type_errors/namespace_import_unknown_type.cd
import "../namespace_import_struct/lib.cd" as shapes;
let p: shapes.Missing = nil;
