tests/golden/type_errors/namespace_import_unknown_type.err
Type error at <repo>/tests/golden/type_errors/namespace_import_unknown_type.cd:2:15: module namespace `shapes` has no exported type `Missing`
  let p: shapes.Missing = nil;
                ^
